# NPUST-RentRoom

./: .env.example  README.md  app.py  db.py  house.json  pyproject.toml
modules/: authentication.py  registration.py
static/: block.css  script.js  style.css  tenant managed.css  tenant_managed.css
static/css/: block.css  dark_mode.css  home.css  house_info.css  house_search.css  landlord_info.css  login&signup.css  private_chat.css  report.css  style.css  system_Managed.css  tenant_managed.css  track_landlord.css
static/js/: auto_typed.js  block_list.js  profilesetting.js  system_managed.js  toast.js
templates/: 404.html  block_list.html  home.html  house_search.html  private_chat.html  profile.html  tenant managed.html  tenant_managed.html
templates/Auth/: dev_login.html  login&signup.html
templates/Report&Feedback/: edit_report&feedback.html  report&feedback.html
templates/engineer/: block_list.html  system_Managed.html
templates/info/: house_info.html  landlord_info.html
templates/layouts/: base.html
templates/managed/: house_managed.html  tenant_managed.html
templates/track/: track_house.html  track_landlord.html
